<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    android:padding="20dp"
    android:background="@drawable/note_item_back"
    tools:context=".ui.note.NoteFragment">

    <!-- TODO: Update blank fragment layout -->

    <ImageView
        android:id="@+id/saveBtn"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:padding="5dp"
        android:text="저장하기"
        android:src="@drawable/save_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title_hint"
        android:padding="5dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:background="@drawable/input_border"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/saveBtn"
        app:layout_constraintEnd_toEndOf="parent"/>

    <CheckBox
        android:id="@+id/isLock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/lock_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lock_text"
        app:layout_constraintStart_toEndOf="@id/isLock"
        app:layout_constraintTop_toTopOf="@id/isLock"
        app:layout_constraintBottom_toBottomOf="@id/isLock"/>


    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/password_input_hint"
        android:textColor="@color/black"
        android:background="@drawable/input_border"
        android:padding="5dp"
        android:visibility="invisible"
        android:inputType="numberPassword"
        app:layout_constraintTop_toTopOf="@id/isLock"
        app:layout_constraintBottom_toBottomOf="@id/isLock"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:hint="@string/input_content_hint"
        android:textColor="@color/black"
        android:background="@drawable/note_back"
        android:layout_marginTop="20dp"
        android:padding="5dp"
        android:gravity="top|left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/characterSizeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/character_size_label"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/characterSize"/>

    <TextView
        android:id="@+id/characterSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>